--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"axios": "^0.19.2",
 		"cheerio": "^1.0.0-rc.3",
 		"dotenv": "^8.2.0",
+		"node-cron": "^2.0.3",
 		"simple-json-db": "^1.2.2",
 		"simply.js": "^1.3.4"
 	},
