--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "app.js",
 	"scripts": {
 		"start": "node app.js",
-		"dev": "nodemon start",
+		"dev": "nodemon --ignore db.json start",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
@@ -20,10 +20,9 @@
 	"homepage": "https://github.com/simba-fs/uptime-robot#readme",
 	"dependencies": {
 		"axios": "^0.21.1",
-		"cheerio": "^1.0.0-rc.3",
 		"dotenv": "^8.2.0",
+		"lowdb": "^1.0.0",
 		"node-cron": "^2.0.3",
-		"simple-json-db": "^1.2.2",
 		"simply.js": "^1.3.4"
 	},
 	"devDependencies": {
