finish command /server listen and /server list

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"axios": "^0.21.1",
 		"config": "^3.3.6",
 		"discord.js": "^12.5.3",
+		"lowdb": "^1.0.0",
 		"slash-commands": "^1.4.0"
 	},
 	"devDependencies": {},
